some code added!

--- a/index.html
+++ b/index.html
@@ -78,8 +78,48 @@
           </div>
     </header>
     <!-- main section here -->
-    <main>
-
+    <main class="lg:w-[90rem] mx-auto lg:my-[1rem]">
+      <!-- section one here -->
+      <section>
+        <div class="">
+          <h1 class="text-center lg:text-3xl text-xl font-extrabold ">Professional Hockeys Club</h1>
+          <p class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem]  mx-auto text-center lg:text-base text-sm font-medium leading-26">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+        <!-- percentage circle -->
+        <div class="lg:flex lg:justify-evenly lg:items-center text-center">
+          <div class="">
+            <div class="radial-progress text-[#FF4240]" style="--value:87; --size:7.5rem" role="progressbar"><span class="text-black text-2xl">87%</span></div>
+            <h1 class="my-[0.8rem] text-xl font-semibold">Prayer Facility</h1>
+            <p class="w-[15.625rem] mx-auto text-center text-base font-normal">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div class="my-[3rem]">
+            <div class="radial-progress text-[#49D293]" style="--value:95; --size:7.5rem" role="progressbar"><span class="text-black text-2xl">95%</span></div>
+            <h1 class="my-[0.8rem] text-xl font-semibold">Prayer Facility</h1>
+            <p class="w-[15.625rem] mx-auto text-center text-base font-normal">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div class="">
+            <div class="radial-progress text-[#FFB546]" style="--value:90; --size:7.5rem" role="progressbar"><span class="text-black text-2xl">90%</span></div>
+            <h1 class="my-[0.8rem] text-xl font-semibold">Prayer Facility</h1>
+            <p class="w-[15.625rem] mx-auto text-center text-base font-normal">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div class="my-[3rem]">
+            <div class="radial-progress text-[#4C8DF1]" style="--value:80; --size:7.5rem" role="progressbar"><span class="text-black text-2xl">80%</span></div>
+            <h1 class="my-[0.8rem] text-xl font-semibold">Prayer Facility</h1>
+            <p class="w-[15.625rem] mx-auto text-center text-base font-normal">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+      </section>
+      <!-- section two here -->
+      <section>
+        <div class="lg:my-[5rem]">
+          <h1 class="text-center lg:text-3xl text-xl font-extrabold ">Professional Hockeys Club</h1>
+          <p class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem]  mx-auto text-center lg:text-base text-sm font-medium leading-26">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+        <!-- Program Sections -->
+       <div>
+          
+       </div>
+      </section>
     </main>
     <!-- footer section here -->
     <footer>
