grid imgs done!

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="lg:my-14 my-4">
         <div class="carousel w-full">
           <div id="slide1" class="carousel-item relative w-full">
-            <img src="images/banner.png" class="w-full rounded-2xl" />
+            <img src="images/banner.png" class="lg:w-full w-11/12 mx-auto rounded-2xl" />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
@@ -102,7 +102,7 @@
             </div>
           </div>
           <div id="slide2" class="carousel-item relative w-full">
-            <img src="images/banner2.jpg" class="w-full rounded-2xl" />
+            <img src="images/banner2.jpg" class="lg:w-full w-11/12 mx-auto rounded-2xl" />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
@@ -202,25 +202,65 @@
           <div class="grid grid-cols-12 gap-4 justify-center">
             <!-- Column -->
             <div
-              class="col-span-12 lg:col-span-6 rounded-2xl bg-cover bg-center bg-no-repeat lg:h-[338px] lg:w-full h-[220px] w-11/12 mx-auto"
-              style="background-image: linear-gradient(200deg, #070211b4 0%, rgba(7, 2, 17, 0.414) 100%),
-              url('./images/hocyball.png')"
-            ></div>
-
-            <!-- Column -->
-            <div
-              class="col-span-12 lg:col-span-6 rounded-2xl bg-cover bg-center bg-no-repeat lg:h-[338px] lg:w-full h-[220px] w-11/12 mx-auto"
-              style="background-image: linear-gradient(200deg, #070211b4 0%, rgba(7, 2, 17, 0.414) 100%),
-              url('./images/hockyfild.png')"
-            ></div>
-
-            <!-- Column -->
-            <div
-              class="col-span-12 lg:col-span-12 rounded-2xl bg-cover bg-center bg-no-repeat lg:h-[450px] lg:w-full h-[220px] w-11/12 mx-auto"
-              style="background-image: linear-gradient(200deg, #070211b4 0%, rgba(7, 2, 17, 0.414) 100%),
-              url('./images/big12.png')"
+              class="col-span-12 lg:col-span-6 rounded-2xl bg-cover bg-center bg-no-repeat lg:h-[338px] lg:w-full h-[220px] w-11/12 mx-auto lg:pl-12 lg:pt-24 p-5"
+              style="
+                background-image: linear-gradient(
+                    200deg,
+                    #070211b4 0%,
+                    rgba(7, 2, 17, 0.414) 100%
+                  ),
+                  url('./images/hocyball.png');
+              "
             >
-              <h1>hello</h1>
+              <h1 class="text-white lg:text-2xl text-xl font-extrabold">Junior Program</h1>
+              <p class="lg:w-[495px] text-white lg:text-base text-sm  font-medium leading-26 lg:my-5 my-2 text-justify " >
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none">Register Now!</button>
+            </div>
+
+            <!-- Column -->
+            <div
+              class="col-span-12 lg:col-span-6 rounded-2xl bg-cover bg-center bg-no-repeat lg:h-[338px] lg:w-full h-[220px] w-11/12 mx-auto lg:pl-12 lg:pt-24 p-5"
+              style="
+                background-image: linear-gradient(
+                    200deg,
+                    #070211b4 0%,
+                    rgba(7, 2, 17, 0.414) 100%
+                  ),
+                  url('./images/hockyfild.png');
+              "
+            >
+            <h1 class="text-white lg:text-2xl text-xl font-extrabold">Junior Program</h1>
+            <p class="lg:w-[495px] text-white lg:text-base text-sm  font-medium leading-26 lg:my-5 my-2 text-justify " >
+              Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+              elit enim sagittis turpis in magna. Id et sed euismod natoque
+              amet nunc morbi nulla. Tortor congue sed et in.
+            </p>
+            <button class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none">Register Now!</button>
+            </div>
+
+            <!-- Column -->
+            <div
+              class="col-span-12 lg:col-span-12 rounded-2xl bg-cover bg-center bg-no-repeat lg:h-[450px] lg:w-full h-[220px] w-11/12 mx-auto lg:pl-12 lg:pt-52 p-5"
+              style="
+                background-image: linear-gradient(
+                    200deg,
+                    #070211b4 0%,
+                    rgba(7, 2, 17, 0.414) 100%
+                  ),
+                  url('./images/big12.png');
+              "
+            >
+            <h1 class="text-white lg:text-2xl text-xl font-extrabold">Junior Program</h1>
+            <p class="lg:w-[495px] text-white lg:text-base text-sm  font-medium leading-26 lg:my-5 my-2 text-justify " >
+              Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+              elit enim sagittis turpis in magna. Id et sed euismod natoque
+              amet nunc morbi nulla. Tortor congue sed et in.
+            </p>
+            <button class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none">Register Now!</button>
             </div>
           </div>
         </div>
