--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
       <div class="lg:my-14 my-4">
         <div class="carousel w-full">
           <div id="slide1" class="carousel-item relative w-full">
-            <img src="images/banner.png" class="lg:w-full w-11/12 mx-auto rounded-2xl" />
+            <img
+              src="images/banner.png"
+              class="lg:w-full w-11/12 mx-auto rounded-2xl"
+            />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
@@ -102,7 +105,10 @@
             </div>
           </div>
           <div id="slide2" class="carousel-item relative w-full">
-            <img src="images/banner2.jpg" class="lg:w-full w-11/12 mx-auto rounded-2xl" />
+            <img
+              src="images/banner2.jpg"
+              class="lg:w-full w-11/12 mx-auto rounded-2xl"
+            />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
@@ -212,13 +218,21 @@
                   url('./images/hocyball.png');
               "
             >
-              <h1 class="text-white lg:text-2xl text-xl font-extrabold">Junior Program</h1>
-              <p class="lg:w-[495px] text-white lg:text-base text-sm  font-medium leading-26 lg:my-5 my-2 text-justify " >
+              <h1 class="text-white lg:text-2xl text-xl font-extrabold">
+                Junior Program
+              </h1>
+              <p
+                class="lg:w-[495px] text-white lg:text-base text-sm font-medium leading-26 lg:my-5 my-2 text-justify"
+              >
                 Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
                 elit enim sagittis turpis in magna. Id et sed euismod natoque
                 amet nunc morbi nulla. Tortor congue sed et in.
               </p>
-              <button class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none">Register Now!</button>
+              <button
+                class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none"
+              >
+                Register Now!
+              </button>
             </div>
 
             <!-- Column -->
@@ -233,13 +247,21 @@
                   url('./images/hockyfild.png');
               "
             >
-            <h1 class="text-white lg:text-2xl text-xl font-extrabold">Junior Program</h1>
-            <p class="lg:w-[495px] text-white lg:text-base text-sm  font-medium leading-26 lg:my-5 my-2 text-justify " >
-              Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-              elit enim sagittis turpis in magna. Id et sed euismod natoque
-              amet nunc morbi nulla. Tortor congue sed et in.
-            </p>
-            <button class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none">Register Now!</button>
+              <h1 class="text-white lg:text-2xl text-xl font-extrabold">
+                Junior Program
+              </h1>
+              <p
+                class="lg:w-[495px] text-white lg:text-base text-sm font-medium leading-26 lg:my-5 my-2 text-justify"
+              >
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button
+                class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none"
+              >
+                Register Now!
+              </button>
             </div>
 
             <!-- Column -->
@@ -254,14 +276,57 @@
                   url('./images/big12.png');
               "
             >
-            <h1 class="text-white lg:text-2xl text-xl font-extrabold">Junior Program</h1>
-            <p class="lg:w-[495px] text-white lg:text-base text-sm  font-medium leading-26 lg:my-5 my-2 text-justify " >
-              Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-              elit enim sagittis turpis in magna. Id et sed euismod natoque
-              amet nunc morbi nulla. Tortor congue sed et in.
-            </p>
-            <button class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none">Register Now!</button>
+              <h1 class="text-white lg:text-2xl text-xl font-extrabold">
+                Junior Program
+              </h1>
+              <p
+                class="lg:w-[495px] text-white lg:text-base text-sm font-medium leading-26 lg:my-5 my-2 text-justify"
+              >
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button
+                class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none"
+              >
+                Register Now!
+              </button>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- section three here -->
+      <section>
+        <div class="lg:my-[5rem] mt-14">
+          <h1 class="text-center lg:text-3xl text-xl font-extrabold">
+            Our New Products
+          </h1>
+          <p
+            class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem] mx-auto text-center lg:text-base text-sm font-medium leading-26"
+          >
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Products card Sections -->
+        <div class="grid lg:grid-cols-2 grid-cols-1 lg:grid-rows-3 w-11/12 mx-auto justify-center gap-4">
+          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
+            1
+          </div>
+          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
+            2
+          </div>
+          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
+            3
+          </div>
+          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
+            4
+          </div>
+          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
+            5
+          </div>
+          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
+            6
           </div>
         </div>
       </section>
