--- a/index.html
+++ b/index.html
@@ -309,24 +309,212 @@
           </p>
         </div>
         <!-- Products card Sections -->
-        <div class="grid lg:grid-cols-2 grid-cols-1 lg:grid-rows-3 w-11/12 mx-auto justify-center gap-4">
-          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
-            1
+        <div
+          class="grid lg:grid-cols-2 grid-cols-1 lg:grid-rows-3 w-11/12 mx-auto justify-center gap-4"
+        >
+          <div
+            class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-auto flex-shrink-0 rounded-2xl mx-auto border border-solid border-gray-500 border-opacity-10"
+          >
+            <!-- card body -->
+            <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
+              <!-- img  -->
+              <div class="">
+                <img class="lg:h-full w-full" src="images/shart.png" alt="" />
+              </div>
+              <div>
+                <!-- icons -->
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                  <p>
+                    <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
+                    5.0
+                  </p>
+                  <p><i class="fa-regular fa-eye fa-fw mr-1"></i> 20</p>
+                  <p><i class="fa-regular fa-heart mr-1"></i> 200</p>
+                </div>
+                <!-- title texts -->
+                <div>
+                  <h1 class="text-xl font-extrabold my-3">
+                    World Cup Flags Football
+                  </h1>
+                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                </div>
+                <!-- price -->
+                <div class="flex lg:gap-5 gap-3 items-center mt-4">
+                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
+                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
-            2
+          <div
+            class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-auto flex-shrink-0 rounded-2xl mx-auto border border-solid border-gray-500 border-opacity-10"
+          >
+            <!-- card body -->
+            <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
+              <!-- img  -->
+              <div class="">
+                <img class="lg:h-full w-full" src="images/egal.png" alt="" />
+              </div>
+              <div>
+                <!-- icons -->
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                  <p>
+                    <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
+                    5.0
+                  </p>
+                  <p><i class="fa-regular fa-eye fa-fw mr-1"></i> 20</p>
+                  <p><i class="fa-regular fa-heart mr-1"></i> 200</p>
+                </div>
+                <!-- title texts -->
+                <div>
+                  <h1 class="text-xl font-extrabold my-3">
+                    World Cup Flags Football
+                  </h1>
+                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                </div>
+                <!-- price -->
+                <div class="flex lg:gap-5 gap-3 items-center mt-4">
+                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
+                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
-            3
+          <div
+            class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-auto flex-shrink-0 rounded-2xl mx-auto border border-solid border-gray-500 border-opacity-10"
+          >
+            <!-- card body -->
+            <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
+              <!-- img  -->
+              <div class="">
+                <img class="lg:h-full w-full" src="images/cap.png" alt="" />
+              </div>
+              <div>
+                <!-- icons -->
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                  <p>
+                    <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
+                    5.0
+                  </p>
+                  <p><i class="fa-regular fa-eye fa-fw mr-1"></i> 20</p>
+                  <p><i class="fa-regular fa-heart mr-1"></i> 200</p>
+                </div>
+                <!-- title texts -->
+                <div>
+                  <h1 class="text-xl font-extrabold my-3">
+                    Cap For Hockeys
+                  </h1>
+                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                </div>
+                <!-- price -->
+                <div class="flex lg:gap-5 gap-3 items-center mt-4">
+                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
+                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
-            4
+          <div
+            class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-auto flex-shrink-0 rounded-2xl mx-auto border border-solid border-gray-500 border-opacity-10"
+          >
+            <!-- card body -->
+            <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
+              <!-- img  -->
+              <div class="">
+                <img class="lg:h-full w-full" src="images/jursy.png" alt="" />
+              </div>
+              <div>
+                <!-- icons -->
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                  <p>
+                    <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
+                    5.0
+                  </p>
+                  <p><i class="fa-regular fa-eye fa-fw mr-1"></i> 20</p>
+                  <p><i class="fa-regular fa-heart mr-1"></i> 200</p>
+                </div>
+                <!-- title texts -->
+                <div>
+                  <h1 class="text-xl font-extrabold my-3">
+                    World Cup Flags Football
+                  </h1>
+                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                </div>
+                <!-- price -->
+                <div class="flex lg:gap-5 gap-3 items-center mt-4">
+                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
+                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
-            5
+          <div
+            class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-auto flex-shrink-0 rounded-2xl mx-auto border border-solid border-gray-500 border-opacity-10"
+          >
+            <!-- card body -->
+            <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
+              <!-- img  -->
+              <div class="">
+                <img class="lg:h-full w-full" src="images/helamt.png" alt="" />
+              </div>
+              <div>
+                <!-- icons -->
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                  <p>
+                    <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
+                    5.0
+                  </p>
+                  <p><i class="fa-regular fa-eye fa-fw mr-1"></i> 20</p>
+                  <p><i class="fa-regular fa-heart mr-1"></i> 200</p>
+                </div>
+                <!-- title texts -->
+                <div>
+                  <h1 class="text-xl font-extrabold my-3">
+                    World Cup Flags Football
+                  </h1>
+                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                </div>
+                <!-- price -->
+                <div class="flex lg:gap-5 gap-3 items-center mt-4">
+                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
+                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-[453px] flex-shrink-0 rounded-2xl  mx-auto border border-solid border-gray-500 border-opacity-10">
-            6
+          <div
+            class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-auto flex-shrink-0 rounded-2xl mx-auto border border-solid border-gray-500 border-opacity-10"
+          >
+            <!-- card body -->
+            <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
+              <!-- img  -->
+              <div class="">
+                <img class="lg:h-full w-full" src="images/football.png" alt="" />
+              </div>
+              <div>
+                <!-- icons -->
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                  <p>
+                    <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
+                    5.0
+                  </p>
+                  <p><i class="fa-regular fa-eye fa-fw mr-1"></i> 20</p>
+                  <p><i class="fa-regular fa-heart mr-1"></i> 200</p>
+                </div>
+                <!-- title texts -->
+                <div>
+                  <h1 class="text-xl font-extrabold my-3">
+                    World Cup Flags Football
+                  </h1>
+                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                </div>
+                <!-- price -->
+                <div class="flex lg:gap-5 gap-3 items-center mt-4">
+                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
+                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
